--- a/src/components/layout/Style/MainLayout.css
+++ b/src/components/layout/Style/MainLayout.css
@@ -1,7 +1,25 @@
+*{
+  font-family: 'Roboto', sans-serif;
+  margin:0; padding:0;
+  box-sizing: border-box;
+  outline: none; border:none;
+  text-decoration: none;
+  text-transform: capitalize;
+  transition: .2s linear;
+}
+
+html  {
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-padding-top: 9rem;
+  scroll-behavior: smooth;
+}
+
 .main_router {
   border: 1px solid #000;
   display: grid;
   grid-template-columns: 1fr 3fr;
+  background-color: #e12454;
 }
 .header_logo {
   border: 1px solid #00ff37;
@@ -20,6 +38,9 @@
   list-style: none;
   width: 10%;
   margin: 0 5px ;
+  font-size: 16px;
+  color: white;
+  text-decoration: none;
 }
 .nav_list:nth-child(4) {
     margin-left: 30%;
@@ -27,12 +48,11 @@
 .sub_container {
   border: 1px solid #ff9a00;
   display: grid;
-  grid-template-columns: 3fr 1fr;
 }
 
 .main_page {
   border: 1px solid #0004ff;
-  height: 85vh;
+  height: 100vh;
 }
 
 .side_bar {
@@ -41,3 +61,4 @@
 .footer {
   border: 1px solid #00c3ff;
 }
+
