--- a/src/components/layout/Style/MainLayout.css
+++ b/src/components/layout/Style/MainLayout.css
@@ -6,6 +6,11 @@
   text-decoration: none;
   text-transform: capitalize;
   transition: .2s linear;
+  
+}
+
+*, ::after, ::before {
+  box-sizing: border-box;
 }
 
 html  {
@@ -32,9 +37,10 @@ html  {
 .main_router {
   display: grid;
   grid-template-columns: 1fr 3fr;
-  background-color: #FFA4B5;
+  background-color: #F50057;
   height: 69.4px;
   align-items: center;
+  
 }
 .header_logo {
 
@@ -61,7 +67,7 @@ html  {
   color: white;
   text-decoration: none;
 }
-.nav_list:nth-child(4) {
+.nav_list:nth-child(5) {
     margin-left: 30%;
   }
 .sub_container {
