--- a/src/components/pages/home/Style/Service.css
+++ b/src/components/pages/home/Style/Service.css
@@ -103,5 +103,11 @@ section{
     padding: 100px;
     background-color: #fff;
     box-sizing: border-box;
-    border-radius: 20px;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.service_conten h5 {
+    padding-top: 60px;
+    font-size: 24px;
 }
