--- a/src/components/layout/Style/MainLayout.css
+++ b/src/components/layout/Style/MainLayout.css
@@ -69,6 +69,10 @@ html  {
 .nav_list:nth-child(5) {
     margin-left: 30%;
   }
+.auth_container{
+  color: rgb(34, 34, 34);
+
+} 
 .sub_container {
   display: grid;
 }
