--- a/src/components/layout/Style/MainLayout.css
+++ b/src/components/layout/Style/MainLayout.css
@@ -1,4 +1,4 @@
-*{
+/* *{
   font-family: 'Roboto', sans-serif;
   margin:0; padding:0;
   box-sizing: border-box;
@@ -6,7 +6,7 @@
   text-transform: capitalize;
 
   
-}
+} */
 
 *, ::after, ::before {
   box-sizing: border-box;
@@ -24,6 +24,8 @@ html  {
   background-color: #ebf5f5;
   height: 51px;
   align-items: center;
+  padding-left: 100px;
+  padding-right: 100px;
 }
 .top_header_content {
   display: flex;
@@ -39,11 +41,9 @@ html  {
   background-color: #F50057;
   height: 69.4px;
   align-items: center;
+  padding-left: 100px;
+  padding-right: 100px;
   
-}
-.header_logo {
-
-  padding-left: 80px;
 }
 
 .header_logo img {
@@ -54,17 +54,17 @@ html  {
 .main_nav {
   display: flex;
   justify-content: center;
-  padding: 25px;
+  /* align-items: center; */
 }
 .nav_list {
   display: flex;
   justify-content: space-around;
   list-style: none;
-  width: 10%;
   margin: 0 5px ;
   font-size: 16px;
   color: white;
   text-decoration: none;
+  border: 2px solid black;
 }
 .nav_list:nth-child(5) {
     margin-left: 30%;
@@ -84,3 +84,13 @@ html  {
   border: 1px solid #00c3ff;
 }
 
+.header_fixed {
+  position: fixed;
+  width: 100%;
+}
+
+
+.nav_list:hover {
+  height: 100%;
+  border-bottom: 1px solid black;
+}
