--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   margin: 0;
   padding: 0;
 }
+
+@media (max-width: 580px) {
+.image-about-wrapper .image-section .image-content {
+    left: 30px;
+    top: 0;
+}
+}
