--- a/src/components/pages/appointment/Styles/AppointmentForm.css
+++ b/src/components/pages/appointment/Styles/AppointmentForm.css
@@ -1,30 +1,43 @@
 /* AppointmentForm.css */
 
+.appointment-form-container {
+  max-width: 600px;
+  margin: 0 auto;
+}
+
+.form-group {
+  margin-bottom: 20px;
+}
+
 /* Make the calendar larger */
-.react-datepicker {
-    width: 300px; /* Adjust the width according to your needs */
-  }
-  
-  /* Position the calendar on the left side */
-  .static-calendar {
-    margin-right: 20px; /* Add some margin for spacing */
-    float: left;
-  }
-  
-  /* Style other components as needed */
-  label {
-    display: block;
-    margin-bottom: 10px;
-  }
-  
-  select {
-    margin-bottom: 10px;
-  }
-  
-  button {
-    background-color: #007bff;
-    color: #fff;
-    padding: 8px 12px;
-    cursor: pointer;
-  }
-  
+.react-calendar {
+  width: 300px; /* Adjust the width according to your needs */
+}
+
+/* Position the calendar on the left side */
+.static-calendar {
+  margin-bottom: 20px;
+}
+
+/* Style other components as needed */
+label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+select {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+}
+
+.submit-button {
+  background-color: #007bff;
+  color: #fff;
+  padding: 10px;
+  cursor: pointer;
+  border: none;
+  border-radius: 5px;
+}
+
+/* Add more styles as needed */
