--- a/src/components/pages/home/Style/HIW.css
+++ b/src/components/pages/home/Style/HIW.css
@@ -35,14 +35,27 @@
   
   /* Caption text */
   .text {
-    color: #f2f2f2;
     font-size: 15px;
     padding: 8px 12px;
     position: absolute;
-    bottom: 8px;
-    width: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     text-align: center;
+    border: solid red;
   }
+
+  .text h2{
+    color: white;
+    text-transform: uppercase;
+    font-weight: bolder;
+  }
+
+  .text p{
+    color: white;
+  }
+
+  
   
   /* Number text (1/3 etc) */
   .numbertext {
@@ -53,7 +66,7 @@
     top: 0;
   }
   
-  /* The dots/bullets/indicators */
+  /* The dots/bullets/indicators
   .dot {
     cursor: pointer;
     height: 15px;
@@ -63,7 +76,7 @@
     border-radius: 50%;
     display: inline-block;
     transition: background-color 0.6s ease;
-  }
+  } */
   
   .active, .dot:hover {
     background-color: #717171;
@@ -102,7 +115,7 @@
 
   .whole_hiw_container {
     margin: 100px;
-  border: solid red;
+    border: solid red;
   }
 
   .hiw_container {
@@ -114,5 +127,13 @@
   }
 
 .hiw_content {
+  text-align: center;
   border: solid blue;
+}
+
+.hiw_content h2 {
+  color: black;
+  text-transform: uppercase;
+  font-weight: bolder;
+  font-size: 48px;
 }
