--- a/src/components/layout/Style/MainLayout.css
+++ b/src/components/layout/Style/MainLayout.css
@@ -19,31 +19,75 @@ html  {
 }
 
 .top_header_section {
-  display: grid;
-  grid-template-columns: 1fr 3fr;
+  display: flex;
+  justify-content: space-between;
   background-color: #ebf5f5;
   height: 51px;
   align-items: center;
   padding-left: 100px;
   padding-right: 100px;
 }
-.top_header_content {
+.email_container {
   display: flex;
-  justify-content: space-around;
-  list-style: none;
-  font-size: 16px;
   color: black;
 }
 
+.email_container h6 {
+  font-size: 16px;
+  display: flex;
+  color: black;
+  align-self: center;
+}
+
+.email_container .fa-solid {
+  font-size: 20px;
+  align-self: center;
+  color: black;
+
+}
+
+.auth_container{
+  padding: 14px;
+  text-align: center;
+  background-color: orange;
+  color: #ffffff;
+  display: flex;
+  align-self: center;
+  color: #ffffff;
+
+} 
+
+.auth_item {
+  text-decoration: none;
+  color: #ffffff;
+}
+
+.auth_content {
+  display: flex;
+  color: black;
+  
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+  padding: 20px;
+}
+
+.fa-brands {
+  font-size: 20px;
+  padding-left: 20px;
+}
+
 .main_router {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  justify-content: space-between;
   background-color: #F50057;
   height: 69.4px;
   align-items: center;
   padding-left: 100px;
   padding-right: 100px;
-  
+
 }
 
 .header_logo img {
@@ -69,10 +113,7 @@ html  {
 .nav_list:nth-child(5) {
     margin-left: 30%;
   }
-.auth_container{
-  color: rgb(34, 34, 34);
 
-} 
 .sub_container {
   display: grid;
 }
@@ -80,17 +121,18 @@ html  {
 .main_page {
   height: 100vh;
 }
-.footer {
-  border: 1px solid #00c3ff;
-}
 
-/* .header_fixed {
+
+.header_fixed {
   position: fixed;
   width: 100%;
   z-index: 10000;
-} */
+}
 
 .nav_list:hover {
   height: 100%;
   border-bottom: 1px solid black;
+}
+.footer {
+  border: 1px solid #00c3ff;
 }
