fixing login page

--- a/src/components/layout/Style/MainLayout.css
+++ b/src/components/layout/Style/MainLayout.css
@@ -123,11 +123,11 @@ html  {
 }
 
 
-.header_fixed {
+/* .header_fixed {
   position: fixed;
   width: 100%;
   z-index: 10000;
-}
+} */
 
 .nav_list:hover {
   height: 100%;
