fix auth add session & fix pet

--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -5,7 +5,7 @@ section{
 
 
 .main_footer_container {
-	background: url(../../../../assets/img/footer.jpg);
+	background: url(../../../assets/img/footer.jpg);
 }
 
 .footer-content-container{
