--- a/src/components/pages/gallery/GalleryPage.css
+++ b/src/components/pages/gallery/GalleryPage.css
@@ -1,5 +1,64 @@
 /* GalleryPage.css */
 
+.main-gallery-container {
+  background-color: #ebf5f5;
+  padding: 0;
+}
+
+.gallery-welcome-container {
+  width: 100%;
+	min-height: 70vh;
+  display: flex;
+	background: url(../../../assets/img/b22.jpg);
+	background-size: cover;
+	/* background-position: center; */
+	background-repeat: no-repeat;
+  align-items: center;
+  text-align: center;
+
+
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+  
+.gallery-welcome-container .gallery-content{
+  display: flex;
+  flex-direction: column;
+  
+
+}
+
+  .gallery-welcome-container .gallery-content h1{
+    padding-top: 20px;
+      font-size: 54px;
+      font-weight: bold;
+    color: black;
+    width: 45rem;
+  }
+  
+  .gallery-welcome-container .gallery-content h1 .span{
+    color: #F50057;
+  }
+
+  .gallery-breadcrumbs {
+    display: flex;
+    justify-content: space-between;
+    align-self: center;
+    width: 150px;
+  }
+  .gallery-breadcrumbs a{
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  .gallery-breadcrumbs li{
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+
+
 .gallery-container {
     max-width: 1200px;
     margin: 0 auto;
