--- a/src/components/pages/appointment/Styles/AppointmentForm.css
+++ b/src/components/pages/appointment/Styles/AppointmentForm.css
@@ -11,15 +11,114 @@
 .react-calendar {
   width: 100%; /* Adjust the width according to your needs */
   min-height: 300px;
+  border: 0;
+}
+/* abbr {
+  color: black;
+} */
+
+.react-calendar__navigation button:enabled:hover, .react-calendar__navigation button:enabled:focus {
+  background-color: orange;
+}
+
+.react-calendar__navigation button:disabled {
+  background-color: orange;
+}
+
+.react-calendar__navigation button {
+  min-width: 44px;
+  background-color: #e12454;
+}
+
+.react-calendar button {
+  margin: 0;
+  border: 0;
+  outline: none;
+  border: 1px solid #eaeaea;
+  
+  
+}
+
+.react-calendar__tile {
+  max-width: 100%;
+  padding: 10px 6.6667px;
+  background: none;
+  text-align: center;
+  line-height: 16px;
+  font: inherit;
+  font-size: 0.833em;
+}
+
+.react-calendar__month-view__days {
+
+}
+
+.react-calendar__month-view__days__day {
+  color: black;
+}
+
+.react-calendar__month-view__days__day--weekend {
+  color: #d10000;
+}
+
+.react-calendar__month-view__days__day--neighboringMonth {
+  color: #757575;
+}
+
+.react-calendar__month-view__weekdays__weekday {
+  padding: 0.5em;
+  color: black;
+}
+
+.react-calendar__year-view__months__month {
+  color: black;
+}
+
+.react-calendar__decade-view__years__year {
+  color: black;
+}
+
+.react-calendar__century-view__decades__decade {
+  color: black;
 }
 
 /* Position the calendar on the left side */
 .static-calendar {
   margin-bottom: 20px;
+  background-color: white;
 }
 
+select {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  background-color: #e12454;
+}
+
+option {
+  font-weight: normal;
+  display: block;
+  min-height: 1.2em;
+  padding: 0px 2px 1px;
+  white-space: nowrap;
+}
+
+
+
+
+
 /* Style other components as needed */
-label {
+.appointment-form-container label {
+  display: block;
+  margin-bottom: 10px;
+}
+
+.form-group label {
+  color: black;
+  font-weight: bold;
+}
+
+.form-sub-container label {
   display: block;
   margin-bottom: 10px;
 }
@@ -31,16 +130,18 @@ select {
 }
 
 .submit-button {
-  background-color: #007bff;
+  margin-left: 20px;
+  background-color: orange;
   color: #fff;
   padding: 10px;
   cursor: pointer;
   border: none;
-  border-radius: 5px;
+  border-radius: 0px 0px 5px 5px;
   transition: background-color 0.3s ease;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 
   &:hover {
-    background-color: #0056b3;
+    background-color: #e12454;
   }
 
   &:disabled {
@@ -56,16 +157,31 @@ select {
 }
 
 .form-group {
-  border: 1px solid #ddd;
-  border-radius: 8px;
-  padding: 16px;
-  margin-bottom: 16px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  text-align: center;
+  padding: 25px;
+  border-radius: 5px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+.pet-card {
+  text-align: center;
+  margin-left: 20px;
+  border-radius: 5px 5px 0px 0px;
+  background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 .pet-card-header {
-  background-color: #f5f5f5;
+  border-radius: 5px 5px 0px 0px;
+  background-color: #e12454;;
   padding: 12px;
+  color: white;
+}
+
+.pet-card-body {
+  display: flex;
+  justify-content: center;
 }
 
 .pet-card-body img {
@@ -97,7 +213,6 @@ select {
   padding: 5px 15px;
   margin-bottom: 16px;
   height: 100%;
-
   border: 1px solid #ddd;
   border-radius: 8px;
   overflow: hidden;
@@ -114,11 +229,11 @@ select {
 
 .pet-checkbox:hover,
 .pet-checkbox.checked {
-  border: 2px solid #6fb1f8; /* Change the border color as needed */
+  border: 2px solid #e12454; /* Change the border color as needed */
 }
 
 .pet-checkbox.checked {
-  background-color: #4494e9; 
+  background-color: #e12454;; 
 
 }
 
@@ -129,16 +244,30 @@ select {
 }
 
 .add-pet-card {
-  border: 2px solid #ccc;
-  padding: 10px;
-  margin: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 15px;
+  margin-bottom: 16px;
+  height: 100%;
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s ease;
   cursor: pointer;
-  transition: border-color 0.3s;
+  background-color: #e12454;
+}
+
+.add-pet-card .fa-solid {
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
 }
 
 .pet-card-Item:hover,
 .add-pet-card:hover {
-  border-color: #007bff;
+  border-color: orange;;
 }
 
 @media screen and (max-width: 768px) {
