fixing profile page

--- a/src/components/Auth/Style/login.css
+++ b/src/components/Auth/Style/login.css
@@ -8,6 +8,8 @@
     width: 100%;
     display: grid;
     grid-template-columns: 2fr 1fr;
+    position: fixed;
+   z-index: 10000;
 }
 
 .main-user-login-container {
