--- a/src/components/pages/blog/BlogPage.css
+++ b/src/components/pages/blog/BlogPage.css
@@ -122,7 +122,7 @@
     margin-bottom: 10px;
 }
   
-  h2 {
+ .blog-details h2 {
     font-size: 1.8rem;
     margin-bottom: 10px;
     color: #333;
