--- a/src/components/pages/profile/Style/ProfilePage.css
+++ b/src/components/pages/profile/Style/ProfilePage.css
@@ -1,7 +1,9 @@
 .main-profile-container {
-    padding-top: 150px;
+    padding-top: 130px;
     background-color: white;
     color: black;
+    display: flex;
+    justify-content: center;
 }
 
 .whole-profile-container {
@@ -14,15 +16,27 @@
 
 .profile-header-container {
     width: 100%;
-    padding: 25px;
-    display: flex;
+    border-radius: 5px 5px 0px 0px;
     background-color: #e12454;
+    display: flex;
     justify-content: space-between;
+    padding: 20px;
     align-items: center;
-    align-content: center;
-    align-self: center;
 }
 
 .profile-header-container h2{
-    font-size: 16px;
+    color: white;
+    font-weight: bold;
+}
+
+.profile-header-container button{
+    padding: 13px 50px;
+    margin-left: 5px;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: bold;
+    background-color: orange;
+    cursor: pointer;
+    transition: opacity 0.4s;
 }
