--- a/src/components/pages/gallery/GalleryPage.css
+++ b/src/components/pages/gallery/GalleryPage.css
@@ -80,7 +80,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
   
-  img {
+ .image-item img {
     width: 100%;
     height: auto;
     border-radius: 8px 8px 0 0;
