--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,10 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
   padding: 0;
 }
 
+Swal.fire {
+  z-index: 2;
+}
+
 @media (max-width: 580px) {
 .image-about-wrapper .image-section .image-content {
     left: 30px;
