--- a/src/components/pages/blog/BlogPage.css
+++ b/src/components/pages/blog/BlogPage.css
@@ -104,7 +104,7 @@
     transform: translateY(-5px);
   }
   
-  img {
+  .blog-post img {
     width: 100%;
     height: auto;
     border-radius: 8px 8px 0 0;
